chore: 댓글 좋아요 수 대로 조회 기능 수정